--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 
 <app-navbar></app-navbar>
-
-<router-outlet></router-outlet>
+<br>
+<app-home></app-home>
+<br>
+<app-nosotros></app-nosotros>
+<br>
+<app-contact></app-contact>
+<!-- <router-outlet></router-outlet> -->
