--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,3 +1,27 @@
-<p>
-  contact works!
-</p>
+ 
+<div parallax id="img-fondo" >
+    <div>
+        <!--Facebook-->
+        <a type="button" class="btn btn-social-icon btn-facebook"><i class="fa fa-facebook"></i></a>
+        <!--Twitter-->
+        <a type="button" class="btn btn-social-icon btn-twitter"><i class="fa fa-twitter"></i></a>
+        <!--Google +-->
+        <a type="button" class="btn btn-social-icon btn-google"><i class="fa fa-google-plus"></i></a>
+        <!--Linkedin-->
+        <a type="button" class="btn btn-social-icon btn-linkedin"><i class="fa fa-linkedin"></i></a>
+        <!--Instagram-->
+        <a type="button" class="btn btn-social-icon btn-instagram"><i class="fa fa-instagram"></i></a>
+        <!--Pinterest-->
+        <!--Youtube-->
+        <a type="button" class="btn btn-social-icon btn-youtube-square"><i class="fa fa-youtube"></i></a>
+        <!--Stack Overflow-->
+        <a type="button" class="btn btn-social-icon btn-stack-overflow"><i class="fa fa-stack-overflow"></i></a>
+        <!--Slack-->
+        <a type="button" class="btn btn-social-icon btn-slack"><i class="fa fa-slack"></i></a>
+        <!--Github-->
+        <a type="button" class="btn btn-social-icon btn-github"><i class="fa fa-github"></i></a>                                           
+      </div>
+    
+  
+</div>
+
