--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,17 +1,3 @@
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="assets/img/path3701.png" alt="First slide">
-    </div>
-    <!-- <div class="carousel-item">
-      <img class="d-block w-100" src="assets/img/tit.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="assets/img/tit.jpg" alt="Third slide">
-    </div> -->
-  </div>
-</div>
-
-<div>
-   
+ 
+<div  id="img-fondo" >
 </div>
