--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,27 +1,20 @@
  
 <div parallax id="img-fondo" >
-    <div>
-        <!--Facebook-->
-        <a type="button" class="btn btn-social-icon btn-facebook"><i class="fa fa-facebook"></i></a>
-        <!--Twitter-->
-        <a type="button" class="btn btn-social-icon btn-twitter"><i class="fa fa-twitter"></i></a>
-        <!--Google +-->
-        <a type="button" class="btn btn-social-icon btn-google"><i class="fa fa-google-plus"></i></a>
-        <!--Linkedin-->
-        <a type="button" class="btn btn-social-icon btn-linkedin"><i class="fa fa-linkedin"></i></a>
-        <!--Instagram-->
-        <a type="button" class="btn btn-social-icon btn-instagram"><i class="fa fa-instagram"></i></a>
-        <!--Pinterest-->
-        <!--Youtube-->
-        <a type="button" class="btn btn-social-icon btn-youtube-square"><i class="fa fa-youtube"></i></a>
-        <!--Stack Overflow-->
-        <a type="button" class="btn btn-social-icon btn-stack-overflow"><i class="fa fa-stack-overflow"></i></a>
-        <!--Slack-->
-        <a type="button" class="btn btn-social-icon btn-slack"><i class="fa fa-slack"></i></a>
-        <!--Github-->
-        <a type="button" class="btn btn-social-icon btn-github"><i class="fa fa-github"></i></a>                                           
-      </div>
-    
-  
+    <div class="main-container">
+        <div class="title">
+            <h3>Contacto</h3>
+        </div>
+        
+        <div class="col-md-12 icon">
+            <ul class="social-network social-circle">
+                <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                <!-- <li><a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li> -->
+                <li><a href="#" class="icoInstagram" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="#" class="icoSlack" title="Slack"><i class="fa fa-slack"></i></a></li>
+                <li><a href="#" class="icoGithub" title="Github"><i class="fa fa-github"></i></a></li>
+                
+            </ul>	                                  
+      </div>    
+    </div>
 </div>
-
