--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,5 +1,34 @@
-#img-fondo{
-    background-image: url('/assets/img/path3701.png');
-    height: 700px;
+.main-container{
     margin-top: 50px;
+    background-color: black;
+    min-height: calc(100vh - 66px);
+
 }
+
+
+.main-container .img img {
+    display: block; 
+    margin: auto;
+    margin-top: 25%;
+    /* vertical-align: 80%; */
+    
+}
+
+.main-container h3{
+    font-family: Courier New, Courier, monospace;
+    font-size: 36px;
+    text-align: center;
+    margin-top: 25%;
+    color: white;
+}
+
+.main-container p {
+    font-size: 30px;
+    font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
+    text-decoration: bisque;
+    text-align: center;
+    margin-top: 50px;
+    font-style: italic;
+    color: aliceblue
+}
+
