--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,9 +1,13 @@
 .navbar{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
     width: 100%;
     z-index: 100;
     overflow: hidden;
+}
+
+.navbar a img{
+    margin-left: 10px;
 }
 
 .navbar button.navbar-toggler {
