--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,14 @@
  
-<div  id="img-fondo" >
+<div class="row main-container">
+    <!-- <div class="row"> -->
+        <div class="col-md-4 img">
+            <img src="assets/img/tit_2016_350.png" alt="">
+        </div>
+        <div class="col-md-8">
+            <h3>Trabajadores Informáticos de Tandil</h3>
+
+            <p>"Por un sindicato organizado y administrado por trabajadores informáticos"</p>
+        </div>
+    <!-- </div> -->
 </div>
+
