--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,13 +7,20 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['home']">Home</a>
+        <a class="nav-link" [routerLink]="['home']">
+            <!-- <i class="fa fa-home" aria-hidden="true"></i> -->
+          Inicio</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['nosotros']">Nosotros</a>
+        
+        <a class="nav-link" [routerLink]="['nosotros']">
+            <!-- <i class="fa fa-user" aria-hidden="true"></i> -->
+          Nosotros</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['contact']">Contacto</a>
+        <a class="nav-link" [routerLink]="['contact']">
+            <!-- <i class="fa fa-inbox" aria-hidden="true"></i> -->
+          Contacto</a>
       </li>
     </ul>
   </div>
