Intento de hacer funcionar animacion en una pagina

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,6 +1,7 @@
  
 <div parallax id="img-fondo" >
-    <div class="main-container">
+    <!-- <a name="contacto"></a> -->
+    <div class="main-container" id="contacto">
         <div class="title">
             <h3>Contacto</h3>
         </div>
@@ -18,3 +19,4 @@
       </div>    
     </div>
 </div>
+
