--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,6 @@
  
-<div class="row main-container">
+<div class="row main-container" id="home">
+    <!-- <a name="home"></a> -->
     <!-- <div class="row"> -->
         <div class="col-md-4 img">
             <img src="assets/img/tit_2016_350.png" alt="">
