--- a/src/app/components/nosotros/nosotros.component.html
+++ b/src/app/components/nosotros/nosotros.component.html
@@ -1,6 +1,7 @@
  
 <div parallax id="img-fondo" >
-  <div class="main-container">
+  <!-- <a name="nosotros"></a> -->
+  <div class="main-container" id="nosotros">
     <h3>¿Quienes somos?</h3>
   </div>
 </div>
