--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,27 +1,32 @@
 <nav class="navbar navbar-expand-lg ">
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" >
     <img src="/assets/img/tit3.png" width="40" height="40" alt="">  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['home']">
+      <li class="nav-item" >
+        <a class="nav-link"  href="#home">
             <!-- <i class="fa fa-home" aria-hidden="true"></i> -->
           Inicio</a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
-        
-        <a class="nav-link" [routerLink]="['nosotros']">
+      <li class="nav-item" >
+        <a class="nav-link" href="#nosotros">
             <!-- <i class="fa fa-user" aria-hidden="true"></i> -->
           Nosotros</a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['contact']">
+      <li class="nav-item" >
+        <a class="nav-link" href="#contacto">
             <!-- <i class="fa fa-inbox" aria-hidden="true"></i> -->
           Contacto</a>
       </li>
     </ul>
   </div>
 </nav>
+
+<!-- <script type="text/javascript">
+  $(document).ready(function() {
+     $('a.nav-item').scrollTo({duration:800});
+  });
+</script> -->
