--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -8,12 +8,11 @@
         
         <div class="col-md-12 icon">
             <ul class="social-network social-circle">
-                <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                <!-- <li><a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li> -->
+                <li><a href="https://www.facebook.com/TITandil" target="_blank" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://twitter.com/titandil" target="_blank" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="#" class="icoInstagram" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="#" class="icoSlack" title="Slack"><i class="fa fa-slack"></i></a></li>
-                <li><a href="#" class="icoGithub" title="Github"><i class="fa fa-github"></i></a></li>
+                <li><a href="https://informaticos-arg.slack.com" target="_blank" class="icoSlack" title="Slack"><i class="fa fa-slack"></i></a></li>
+                <li><a href="https://github.com/TITandil" target="_blank" class="icoGithub" title="Github"><i class="fa fa-github"></i></a></li>
                 
             </ul>	                                  
       </div>    
